--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <body>
 <div id="react-content"></div>
 </body>
+<!-- <script src="https://as.alipayobjects.com/g/datavis/g2/1.2.1/index.js"></script> -->
+<script src="./dist/g2.chart.js"></script>
 <script src="./common.js"></script>
 <script src="./index.js"></script>
 </html>
